# xenmm

./: .gitignore  CMakeLists.txt  FindXen.cmake  README-zh.md  README.md  README.rst  TODO.md  config.h.in  dacapo.md  lvm-configuration.md  openreport(discard).md  openreport.md  paper(discard).md  paper.md  tests.md  vm-configuration.md  vm-configuration.rst  xen-configuration.md  xen-configuration.rst
canvas/: canvas.html  start.sh
dataset/1-28_tau/: dacapo.csv
dataset/1-9_dacapo/: dacapo.csv
dataset/1_4_dacapo/: dacapo.csv
dataset/1_8_dacapo/: dacapo.csv
dataset/2-19_dynamic/: dacapo.ods
dataset/2-3_dacapo_low/: dacapo.csv
dataset/2-4_tau/: dacapo.ods
dataset/3-21/: standard.ods
dataset/3-22/: statics.ods
dataset/3-22/vm1/: off-nginx.7z  on.7z
dataset/3-22/vm1/off-nginx/: test-1.xml
dataset/3-22/vm1/off-nginx/system-logs/2013-03-22 07:41/: cc  environment-variables  lscpu  lspci  meminfo  mounts  version
dataset/3-22/vm1/on-nginx/: test-1.xml
dataset/3-22/vm1/on-nginx/system-logs/2013-03-22 07:59/: cmdline  cpuinfo  dmesg  lsmod  meminfo  modules  mounts  uname
dataset/3-24/: statics.xlsx
dataset/3-24/vm1/: on.7z
dataset/3-24/vm3/: on.7z
dataset/3-24/vm5/: off.7z  on.7z
dataset/3-27/: statics.xlsx
dataset/3-27/vm1/: off.7z  on.7z
dataset/3-27/vm3/: off.7z  on.7z
dataset/3-27/vm5/: off.7z  on.7z
dataset/3-30/: statics.xlsx
dataset/3-30/vm1/: off.7z  on.7z
dataset/3-30/vm10/: off.7z  on.7z
dataset/3-30/vm3/: off.7z  on.7z
dataset/3-30/vm5/: off.7z  on.7z
dataset/3-30/vm7/: off.7z  on.7z
dataset/3-30/vm8/: off.7z  on.7z
dataset/3-30/vm9/: off.7z  on.7z
dataset/3-31/: statics.xlsx
dataset/3-3_dynamic/: dacapo.ods
dataset/3-8_dacapo/: dacapo.ods
dataset/3-9_dacapo_high/: dacapo.ods
dataset/4-01/: statics.xlsx
dataset/4-01/vm1/: off.7z  on.7z
dataset/4-01/vm10/: off.7z  on.7z
dataset/4-01/vm3/: off.7z  on.7z
dataset/4-01/vm5/: off.7z  on.7z
dataset/4-01/vm7/: off.7z  on.7z
dataset/4-01/vm8/: off.7z  on.7z
dataset/4-01/vm9/: off.7z  on.7z
dataset/4-02/: statics.xlsx
dataset/4-02/vm1/: off.7z  on.7z
dataset/4-02/vm10/: off.7z  on.7z
dataset/4-02/vm3/: off.7z  on.7z
dataset/4-02/vm5/: off.7z  on.7z
dataset/4-02/vm7/: off.7z  on.7z
dataset/4-02/vm8/: off.7z  on.7z
dataset/4-02/vm9/: off.7z  on.7z
dataset/4-16/: statics.xlsx
dataset/4-16/vm1/: off.7z  on.7z
dataset/4-16/vm10/: off.7z  on.7z
dataset/4-16/vm3/: off.7z  on.7z
dataset/4-16/vm5/: off.7z  on.7z
dataset/4-16/vm7/: off.7z  on.7z
dataset/4-16/vm8/: off.7z  on.7z
dataset/4-16/vm9/: off.7z  on.7z
dataset/4-27_dacapo/: dacapo.ods
dataset/4-28_dacapo/: dacapo.ods
dataset/4-29_dacapo/: dacapo.ods
dataset/5-1_dynamic/: dacapo.ods
notebook/: collection.bib  epsre.sh  header.tex  notebook1.nb  notebook2.nb  paper.lyx  paper.tex  template.tex  workload.nb  workload2.nb  workload3.nb
notebook/graph/: architecture.graphml  balloon-2.graphml  balloon.graphml  client.graphml  framework.graphml  level.graphml  mono.graphml  server-silm.graphml  server.graphml
notebook/tex/: workload.tex  workload_gr1.eps  workload_gr10.eps  workload_gr11.eps  workload_gr2.eps  workload_gr3.eps  workload_gr4.eps  workload_gr5.eps  workload_gr6.eps  workload_gr7.eps  workload_gr8.eps  workload_gr9.eps
script/: CMakeLists.txt  dacapo_test.sh  deply-deb.sh  fake-test.sh  ip.sh  mmclientd  open-xs.sh  set-mem.sh
src/: CMakeLists.txt  mmclient.c  mmctrl.c  mmctrl.h  mmrecord.c  mmrecord.h  mmserver.c  mmstat.c  mmstat.h  mmstore.c  mmstore.h  solve.c  solve.h  type.c  type.h
src/util/: failed.c  failed.h  xenstattool.c  xenstattool.h
test/: CMakeLists.txt  mono-client.c  mono.c  random.c  static.c  swap.c  util.c  util.h
unit/: CMakeLists.txt  core.c  linear.cc
